<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditDrugActivity"
    android:layout_width = "match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <!-- Name and brand name in one layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation = "vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                style = "@style/EditorCategoryStyle"
                android:text = "@string/generic_name"/>
            <EditText
                android:id = "@+id/edit_generic_name"
                style="@style/EditorFieldStyle"
                android:inputType="textCapCharacters"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                style = "@style/EditorCategoryStyle"
                android:text="@string/brand_name"/>
            <EditText
                style="@style/EditorFieldStyle"
                android:id = "@+id/edit_brand_name"
                android:inputType="textCapCharacters"
                android:layout_marginLeft = "16dp"/>
        </LinearLayout>

    </LinearLayout>
    <!-- For selecting the category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/EditorCategoryStyle"
            android:text="@string/drugs_category"/>
        <!-- Gender drop-down spinner -->
        <Spinner
            android:id="@+id/drugs_category_spinner"
            android:layout_height="48dp"
            android:layout_width="wrap_content"
            android:paddingRight="16dp"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
    <!--For inputing dose per kg-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingTop = "16dp"
        android:layout_marginTop = "8dp"
        android:orientation="horizontal">
        <TextView
            style = "@style/EditorCategoryStyle"
            android:layout_weight="2"
            android:text = "@string/editor_dosage"
            android:fontFamily="sans-serif-medium"/>
        <EditText
            android:id = "@+id/edit_dosage"
            style = "@style/EditorFieldStyle"
            android:inputType="number"/>
        <TextView
            style = "@style/EditorCategoryStyle"
            android:text="@string/dosage_unit"/>
    </LinearLayout>
    <!--For inputing available dosage-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:layout_marginTop = "8dp">
        <TextView
            style = "@style/EditorCategoryStyle"
            android:layout_weight="3"
            android:text = "@string/editor_available_strengths"/>
        <EditText
            android:id = "@+id/edit_strength_1"
            style="@style/EditorFieldStyle"
            android:inputType = "numberDecimal"/>
        <TextView
            style = "@style/EditorCategoryStyle"
            android:text = "mg"/>
    </LinearLayout>

    </LinearLayout>
</ScrollView>